# NNBRDF_Render

./: .gitignore  3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  LICENSE  README.md  commond.py  example  fragment_shader.glsl  main.cpp  testSerialize.struct  vertex_shader.glsl
TestMain/: JSONTest1.cpp  JSONTest2.cpp  TestHelloWorld.cpp
include/: shader_s.h
include/scene/: Camera.hpp  Component.hpp  ImageManager.hpp  Light.hpp  MeshManager.hpp  Object.hpp  Object_t.hpp  PipelineManager.hpp  SceneManger.hpp  ShaderManager.hpp
include/shaders/: shader.hpp  shaders.hpp
include/utils/: utils.hpp
resource/JSON/: JSONTest2.json
resource/material/: LightColor.mat  LightColor0.mat  LightColor1.mat  LightColor2.mat  LightColor3.mat  PBR.mat  SkyBox.mat
resource/prefab/: meshcmp.m  skybox.pref  skyrend.m  skytrans.m
resource/scene/: MutiLightTest.scene  test1.scene  test2.scene
resource/script/: EditorCamera.cpp  ForwardTest.cpp  LightBox.cpp  TestScript.cpp
resource/shaders/: Blinn_Phong.glsl  Blinn_Phong.hlsl  Blinn_Phong_test.glsl  Bloom.glsl  BloomA.glsl  BloomB.glsl  BloomC.glsl  BloomD.glsl  BloomPassA.glsl  BloomPassB.glsl  DepthColorChanger.glsl  GGX_PBR.glsl  HightLightFliter.glsl  LightColor.glsl  PointLightShadowMap.glsl  a_Blinn_Phong_BRDF.fs  a_default.fs  a_default.vs  a_light.fs  a_skybox.fs  a_skybox_cubemap.fs  a_skybox_hdr.fs  b_blackhole_p1.fs  b_blackhole_p5.fs  b_depth_test.fs  b_luminance.fs  b_post.vs  b_through.fs  c_point_shadow.gs  c_point_shadow.vs  shaders.cpp  shaders_uniform.hpp  skyBox.glsl  std_default_vertex.vs
source/shaders/: 1_common.vs  1_cube.fs  2_boom.fs  2_through.fs  a_default.fs  a_default.vs  a_light.fs  a_phong_BRDF.fs  b_blackhole_p1.fs  b_blackhole_p2.fs  b_blackhole_p3.fs  b_blackhole_p4.fs  b_blackhole_p5.fs  b_boom.fs  b_luminance.fs  b_post.vs  cube.fs  cube.vs  full_screen.fs  full_screen.vs  light.fs  shaders.cpp  shaders_uniform.hpp
src/editor/: ComponentInspector.hpp  ImGui.cpp  ImGui.hpp  UI_utils.hpp
src/scene/: BaseInfoUniform.hpp  Camera.hpp  CameraUnifrom.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  ImageManager.cpp  ImageManager.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  LightUniform.cpp  LightUniform.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  Object.cpp  Object.hpp  PipelineManager.cpp  SceneManager.cpp  (+8 more)
(+73 files in other folders)
